<resources>
    <string name="app_name">ReadingJournal</string>
    <string name="book_title_hint">Enter a Book title.</string>
    <string name="book_author_hint">Enter the author of the Book.</string>
    <string name="book_genre_hint">Enter the genre of the Book.</string>
    <string name="book_title_label">Title</string>
    <string name="book_author_label">Author</string>
    <string name="book_genre_label">Genre</string>
    <string name="book_details_label">Comment</string>
    <string name="book_read_label">Read</string>
</resources>
